Fix: fix container overflow

--- a/client/src/components/Container/Container.css
+++ b/client/src/components/Container/Container.css
@@ -1,6 +1,5 @@
 @media (min-width: 320px) {
   .container {
-    min-width: 320px;
     max-width: 1280px;
     padding-left: 15px;
     padding-right: 15px;
@@ -11,7 +10,6 @@
 
 @media (min-width: 768px) {
   .container {
-    width: 768px;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -19,7 +17,6 @@
 
 @media (min-width: 1280px) {
   .container {
-    width: 1280px;
     padding-left: 25px;
     padding-right: 25px;
   }
